
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 scalar_t__ shellcode ;
 int strlen (scalar_t__) ;

int
main(void)
{
    void (*code)() = (void *)shellcode;
    printf("Shellcode length: %d\n", strlen(shellcode));
    code();
    return(1);
}
